Bug/fix contact spacing (#121)
* Update main.yml

* updated margin-left spacing

--- a/client/src/components/pages/styles/Profile.css
+++ b/client/src/components/pages/styles/Profile.css
@@ -39,7 +39,7 @@ ul#profile_labels_list li {
 }
 
 .profile_inner_contact {
-  margin-left: -50%;
+  margin-left: -55%;
 }
 
 .profile_inner_contact_list > li{
